# dailyfile

./: .gitignore  CMakeLists.txt  Makefile  README.md  dailyfile.c
